# ciclo

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  EGG.md  README.md  devenv.nix  devenv.yaml  justfile  manifest  package-lock.json  package.json  pyproject.toml  tsconfig.json
.beads/: config.yaml  interactions.jsonl  metadata.json
.claude/: settings.json
.codex/: hooks.json
claude/: agent.md
docs/: benchmarks.md  getting-started.md  onboarding-project.md  operator-workflows.md
examples/: ciclo-config.json
nix/: runner-images.nix
scripts/: agent-gate.py  codex-remote-maintenance.sh  codex-remote-setup.sh
src/: access-audit-log.ts  access-enforcement.ts  access-grants.ts  app.ts  auth-device-flow.ts  beads-adapter.ts  beads-dolt-sync.ts  beads-metadata.ts  beads-progress.ts  beads-prompt-builder.ts  beads-remote-health.ts  beads-remote.ts  beads-shared-server.ts  beads-tracker-sync.ts  beads-work-queue.ts  benchmark-models.ts  benchmark-runner.ts  benchmark-safety-checks.ts  benchmark-scenario.ts  ciclo-config.ts  ciclo-core.ts  ciclo-cron.ts  ciclo-events.ts  ciclo-memory.ts  claude-background-agent.ts  cli.ts  client-auth.ts  context-budget.ts  context-classifier.ts  context-compaction.ts  context-pack.ts  context-redaction.ts  demo.ts  harness-registry.ts  herdr-adapter.ts  internal-heartbeat.ts  loop-config.ts  mcp-contract.ts  mcp-http-cli.ts  mcp-http.ts  (+31 more)
tests-ts/: access-audit-log.test.ts  access-enforcement.test.ts  access-grants.test.ts  auth-device-flow.test.ts  beads-adapter.test.ts  beads-dolt-sync.test.ts  beads-remote.test.ts  (+50 more)
(+121 files in other folders)
