[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ciclo"
version = "0.1.8"
description = "Spec-driven agent supervisor for Herdr-backed coding harnesses."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Ciclo contributors" }
]
dependencies = []

[project.scripts]
ciclo = "ciclo.cli:main"
ciclo-demo = "ciclo.demo:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
